# SideScreen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SESSION_CONTEXT.md  setup.sh
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-tag.yml  build-android.yml  build-mac.yml  release.yml
AndroidClient/: .editorconfig  build.gradle.kts  gradlew  settings.gradle.kts
AndroidClient/app/: build.gradle.kts
AndroidClient/app/src/main/: AndroidManifest.xml
AndroidClient/app/src/main/java/com/sidescreen/app/: CodecCapabilities.kt  DiagLog.kt  InputPredictor.kt  MainActivity.kt  PreferencesManager.kt  StreamClient.kt  VideoDecoder.kt
AndroidClient/app/src/main/java/com/virtualdisplay/client/: InputPredictor.kt  MainActivity.kt  PreferencesManager.kt  StreamClient.kt  VideoDecoder.kt
AndroidClient/app/src/main/res/color/: switch_thumb_color.xml  switch_track_color.xml
AndroidClient/app/src/main/res/drawable/: bottom_sheet_background.xml  connection_icon_bg.xml  ic_settings.xml  settings_background.xml  status_indicator_green.xml
AndroidClient/app/src/main/res/layout/: activity_main.xml  bottom_sheet_settings.xml  dialog_settings.xml
AndroidClient/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
AndroidClient/app/src/main/res/values/: strings.xml  themes.xml
LinuxHost/: CMakeLists.txt  README.md
LinuxHost/.github/workflows/: build-linux.yml
LinuxHost/packaging/: build-appimage.sh  build-deb.sh  sidescreen.desktop
LinuxHost/scripts/: build.sh
LinuxHost/src/: AdbManager.cpp  AdbManager.h  AppController.cpp  AppController.h  Config.h  main.cpp
LinuxHost/src/capture/: PipeWireCapture.cpp  PipeWireCapture.h  ScreenCapture.cpp  ScreenCapture.h  X11Capture.cpp  X11Capture.h
LinuxHost/src/display/: VirtualDisplayManager.cpp  VirtualDisplayManager.h
LinuxHost/src/encoder/: FFmpegEncoder.cpp  FFmpegEncoder.h  VaapiEncoder.cpp  VaapiEncoder.h  VideoEncoder.cpp  VideoEncoder.h
LinuxHost/src/input/: TouchHandler.cpp  TouchHandler.h
LinuxHost/src/streaming/: StreamingServer.cpp  StreamingServer.h
LinuxHost/src/ui/: DisplaySettings.h  SettingsWindow.cpp
MacHost/: .swiftlint.yml  Info.plist  Package.swift  VirtualDisplay.entitlements  test_scstream.swift
MacHost/CaptureTest/: Package.swift  build.sh
MacHost/CaptureTest/Sources/: CGVirtualDisplayBridge.h  TestAVCapture.swift  TestCGDisplayStream.swift  TestSCStream.swift  main.swift  module.modulemap
MacHost/Resources/: AppIcon.icns
MacHost/Sources/: AppDelegate.swift  CodecLimits.swift  ConnectionMode.swift  DaemonManager.swift  LANAddressResolver.swift  ScreenCapture.swift  SettingsWindow.swift  StatusDetector.swift  StreamingServer.swift  VideoEncoder.swift  VirtualDisplayManager.swift  main.swift
MacHost/StreamTest/: Package.swift  build.sh
MacHost/StreamTest/Sources/: TestEncoder.swift  TestPatternGenerator.swift  TestServer.swift  main.swift
MacHost/Tests/SideScreenTests/: CodecLimitsTests.swift  LANAddressResolverTests.swift
SideScreen.app/Contents/: Info.plist
SideScreen.app/Contents/MacOS/: SideScreen
VirtualDisplay.app/Contents/: Info.plist
VirtualDisplay.app/Contents/MacOS/: VirtualDisplay
VirtualDisplayHost.app/Contents/: Info.plist
VirtualDisplayHost.app/Contents/MacOS/: VirtualDisplayHost
WindowsHost/: CMakeLists.txt  README.md
WindowsHost/.github/workflows/: build-windows.yml
WindowsHost/installer/: sidescreen.iss
WindowsHost/resources/: sidescreen.rc
WindowsHost/scripts/: build.bat
WindowsHost/src/: AdbManager.cpp  AdbManager.h  AppController.cpp  AppController.h  Config.h  main.cpp
WindowsHost/src/capture/: ScreenCapture.cpp  ScreenCapture.h
WindowsHost/src/display/: VirtualDisplayManager.cpp  VirtualDisplayManager.h
WindowsHost/src/encoder/: AmfEncoder.cpp  AmfEncoder.h  MfSoftEncoder.cpp  MfSoftEncoder.h  NvencEncoder.cpp  NvencEncoder.h  QsvEncoder.cpp  QsvEncoder.h  VideoEncoder.cpp  VideoEncoder.h
WindowsHost/src/input/: TouchHandler.cpp  TouchHandler.h
WindowsHost/src/streaming/: StreamingServer.cpp  StreamingServer.h
WindowsHost/src/ui/: DisplaySettings.cpp  DisplaySettings.h  SettingsWindow.cpp  SettingsWindow.h
docs/plans/: 2026-02-20-capture-api-test-design.md  2026-02-20-gesture-system-design.md
resources/: SCREENSHOT-GUIDE.md
resources/logo/: README.md
resources/screenshots/: README.md
scripts/: build_android.sh  build_mac.sh  bump-version.sh  cleanup_tunnel.sh  create-app.sh  dev-test.sh  install.sh  install_android.sh  release.sh  run.sh  run_mac.sh  setup-usb.sh  setup_tunnel.sh  uninstall.sh
tmp_icon/: gen_logos.py  gen_logos_v2.py  gen_logos_v3.py  gen_logos_v4.py  process_logo.py
website/: donate.html  index.html  scripts.js  styles.css  vercel.json
website/assets/: README.md
